Fix config menu z-index

--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -23,7 +23,7 @@ body {
 	position: fixed;
 	right: 0;
 	top: 0;
-	z-index: 1;
+	z-index: 2;
 	-webkit-app-region: drag;
 
 	h1 {
